# term-navigator

./: Cargo.toml  README.md
src/: display.rs  main.rs  navigator.rs
