[package]
name = "term-navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
console = "0.15.5"
clap = { version = "4.1.4", features = ["derive"] }
